syntax = "proto3";
import "ConstVipTableItemEx.proto";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstVipTableProtobuf";

message	ConstVipTable  {
	repeated	ConstVipTableItemEx	items = 1;
}